--- a/src/app/blueprint/blueprint.component.html
+++ b/src/app/blueprint/blueprint.component.html
@@ -40,14 +40,13 @@
 			</g>
 		</g>
 	</g>
-
-  <g *ngIf="toolbox" app-toolbox [context]="model"></g>
+  <g *ngIf="toolbox" app-toolbox [context]="model" (onSelected)="onSelectedTemplate($event)"></g>
 
 	<!--splash screen -->
 	<g *ngIf="idle">
 		<rect x="-5000" y="-5000" width="10001" height="10001" fill="black" opacity="0.7" />
 		<text x="10" y="350" font-family="Verdana" font-size="50" fill="yellow">
-			Plop
+			Blueprint
 		</text>
 		<line x1="10" y1="365" x2="600" y2="365" style="opacity:1;stroke:yellow;stroke-width:8"></line>
 		<text x="10" y="400" font-family="Verdana" font-size="30" fill="#777">
