--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div style="display:flex;width:100%;height:100%">
   <div style="flex-grow:1">
-  <app-blueprint></app-blueprint>
+  <app-blueprint [model]="context"></app-blueprint>
   </div>
   <div style="flex-basis: 15em;background:black">Extra</div>
 </div>
