feat: string field is implemented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
   <div style="flex-grow:1">
   <app-blueprint [model]="context"></app-blueprint>
   </div>
-  <div style="flex-basis: 15em;background:black">Extra</div>
+  <!--<div style="flex-basis: 15em;background:black">Extra</div>-->
 </div>
