--- a/src/app/blueprint/blueprint.component.html
+++ b/src/app/blueprint/blueprint.component.html
@@ -25,7 +25,7 @@
 
 		<!-- Nodes -->
 		<g *ngFor="let node of model.nodes">
-			<g app-node [model]="node" [context]="model" />
+			<g app-node [model]="node" [context]="model" (onEditing)="nodeEditing()" (onEdited)="nodeEdited()" />
 		</g>
 		<g *ngIf="model.shadowLink">
 			<path [attr.d]="model.shadowLink.curvePath" stroke="yellow" fill="none" />
