--- a/src/app/node/node.component.css
+++ b/src/app/node/node.component.css
@@ -10,8 +10,9 @@
   border-radius:2px;
   box-sizing: border-box;
   border: solid 2px black;
-  
-  white-space:nowrap; 
+  white-space:nowrap;
+  padding-left : 5px;
+  padding-right: 5px;
 }
 
 .node.selected {
@@ -41,5 +42,19 @@
 .title{
    font-size: 12px;
    font-weight: bold;
-   background-color: gray;
+   background-color:rgb(34, 34, 34);
+}
+
+.form {
+  background: gray;
+  color: black;
+  border:0px red solid;
+  border-radius: 3px;
+}
+
+.form input {
+  background: rgb(156, 156, 156);
+  color: black;
+  border:0px red solid;
+  font-size: 10px;
 }
