feat: the toolbox position is binded with the mouse position

--- a/src/app/blueprint/blueprint.component.html
+++ b/src/app/blueprint/blueprint.component.html
@@ -39,8 +39,8 @@
 				</g>
 			</g>
 		</g>
+		<g *ngIf="toolbox" app-toolbox [context]="model" [x]="toolboxPosition.x" [y]="toolboxPosition.y" (onSelected)="onSelectedTemplate($event)"></g>
 	</g>
-  <g *ngIf="toolbox" app-toolbox [context]="model" (onSelected)="onSelectedTemplate($event)"></g>
 
 	<!--splash screen -->
 	<g *ngIf="idle">
