--- a/src/app/toolbox/toolbox.component.html
+++ b/src/app/toolbox/toolbox.component.html
@@ -1,6 +1,6 @@
 <svg:g>
 	<rect x="-5000" y="-5000" width="10001" height="10001" fill="black" opacity="0.5" />
-	<foreignObject [attr.x]="10" [attr.y]="10" [attr.width]="200" [attr.height]="500" fill="black">
+	<foreignObject [attr.x]="x" [attr.y]="y" [attr.width]="200" [attr.height]="500" fill="black">
 		<xhtml:div class="root">
       <h1>Toolbox</h1>
       <div *ngFor="let template of context.templates">
