--- a/src/app/node/node.component.css
+++ b/src/app/node/node.component.css
@@ -3,6 +3,8 @@
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 10px;
   background : rgba(0,0,0,0.5);
+  background: linear-gradient(180deg, rgba(0,0,0,0.5) 0%, rgba(10,10,10,0.5) 100%);
+
   padding:0em;
   color: white;
   width: 100%;
