--- a/src/app/node/node.component.html
+++ b/src/app/node/node.component.html
@@ -1,10 +1,10 @@
 <svg:foreignObject [attr.x]="model.box.x" [attr.y]="model.box.y" [attr.width]="model.box.width" [attr.height]="model.box.height"
  (mousedown)="onClick($event)">
-	<xhtml:div [ngClass]="{'noselect':true, 'node': true, 'selected': model.selected}">
+	<xhtml:div [ngClass]="{'noselect':true, 'node': true, 'active': model.active}">
 		<div class="block title">
-			<!--<input  *ngIf="model.selected" [(ngModel)]="model.title" placeholder="title" />
-    <span *ngIf="!model.selected">{{model.title}}</span>-->
-			<span>{{selected}} {{model.title}}</span>
+			<!--<input  *ngIf="model.active" [(ngModel)]="model.title" placeholder="title" />
+    <span *ngIf="!model.active">{{model.title}}</span>-->
+			<span>{{active}} {{model.title}}</span>
     </div>
     <ng-container *ngFor="let field of model.fields" >
       <div *ngIf="field.formBehavior=='none'"  [ngClass]="{'block':true, 'output': field.outputBehavior!='none' }">
