fix close button

--- a/src/app/titlebar/titlebar.component.html
+++ b/src/app/titlebar/titlebar.component.html
@@ -16,7 +16,7 @@
           <span>🗗</span>
         </div>
         <div class="button" (click)="close()" id="close-button">
-          <span>🗙</span>
+          <span>🗙&nbsp;&nbsp;</span>
         </div>
   
       </div>
