--- a/src/app/titlebar/titlebar.component.css
+++ b/src/app/titlebar/titlebar.component.css
@@ -1,9 +1,3 @@
-
-/* Basic styling */
-* {margin: 0; padding: 0; border: 0; vertical-align: baseline;}
-html {box-sizing: border-box;}
-*, *:before, *:after {box-sizing: inherit;}
-html, body {height: 100%; margin: 0;}
  
 
 #titlebar {
@@ -11,7 +5,8 @@ html, body {height: 100%; margin: 0;}
   position: fixed;
   height: 32px;
   width: calc(100% - 2px);
-  border-bottom: solid 1px gray;
+  background-color: black;
+  user-select: none;
 }
 
 .maximized #titlebar {
