--- a/src/app/titlebar/titlebar.component.html
+++ b/src/app/titlebar/titlebar.component.html
@@ -2,9 +2,8 @@
     <div id="drag-region" [ngClass]="{'maximized':isMaximized }">
   
       <div id="window-title">
-        <span>blueprint editor</span>
+          <span>Blueprint <select><option>ss</option></select></span>
       </div>
-  
       <div id="window-controls">
         <div class="button" (click)="minimize()" id="min-button">
           <span>🗕</span>
