--- a/src/styles.css
+++ b/src/styles.css
@@ -6,10 +6,9 @@ html, body {
   margin:0;
   padding:0;
   overflow: hidden;
+  background: black;
+  color: white;
 }
-
-
-
 
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
