--- a/src/app/blueprint/blueprint.component.html
+++ b/src/app/blueprint/blueprint.component.html
@@ -1,4 +1,4 @@
-<svg width="100%" height="100%" css="svgText" style="background: #222" (focus)="focus()" (blur)="blur()">
+<svg width="100%" height="100%" css="svgText" style="background: #222" >
 	<defs>
 		<pattern id="smallGrid" width="20" height="20" patternUnits="userSpaceOnUse">
 			<path d="M 20 0 L 0 0 0 20" fill="none" stroke="#000" stroke-width="0.5" />
@@ -44,7 +44,8 @@
 	</g>
 
 	<!--splash screen -->
-	<g *ngIf="idle">
+	<!--
+	<g *ngIf="idle" (click)="focus()">
 		<rect x="-5000" y="-5000" width="10001" height="10001" fill="black" opacity="0.7" />
 		<image x="-10" y="50" width="250" height="250" xlink:href="assets/blueprint-icon.svg" />
 		<text x="10" y="350" font-family="Verdana" font-size="50" fill="yellow">
@@ -58,4 +59,5 @@
 			"Bring your language"
 		</text>
 	</g>
+	-->
 </svg>
