--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<app-titlebar></app-titlebar>
+<app-titlebar [model]="context"></app-titlebar>
 <div style="display:flex;width:100%;height:100%">
   <div style="flex-grow:1">
-    <app-blueprint [model]="context"></app-blueprint>
+    
+    <app-blueprint *ngIf="context && context.active" [model]="context.active"></app-blueprint>
   </div>
   <!--<div style="flex-basis: 15em;background:black">Extra</div>-->
 </div>
