--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div style="display:flex;width:100%;height:100%">
   <div style="flex-grow:1">
     
-    <app-blueprint *ngIf="context && context.active" [model]="context.active"></app-blueprint>
+    <app-blueprint *ngIf="context && context.active" [model]="context.active" [context]="context"></app-blueprint>
   </div>
   <!--<div style="flex-basis: 15em;background:black">Extra</div>-->
 </div>
