--- a/src/app/blueprint/blueprint.component.html
+++ b/src/app/blueprint/blueprint.component.html
@@ -1,4 +1,4 @@
-<svg width="100%" height="100%" css="svgText" style="background: #222" >
+<svg width="100%" height="100%" css="svgText" style="background: #222">
 	<defs>
 		<pattern id="smallGrid" width="20" height="20" patternUnits="userSpaceOnUse">
 			<path d="M 20 0 L 0 0 0 20" fill="none" stroke="#000" stroke-width="0.5" />
@@ -14,7 +14,6 @@
 			<path d="M 500 0 L 0 0 0 500" fill="none" stroke="black" stroke-width="2" />
 		</pattern>
 	</defs>
-
 	<text x="10" y="10" font-family="Verdana" font-size="10" fill="#777">
 		Data Editor, "bring your language" - {{nodeCounter}} nodes / {{linkCounter}} links / drag({{drag}})
 		multi-selection({{multiSelectControl}}) / selected({{selectedCounter}})
@@ -26,7 +25,8 @@
 
 		<!-- Nodes -->
 		<g *ngFor="let node of model.nodes">
-			<g app-node [model]="node" [context]="model" [multiSelection]="multiSelectControl" (onEditing)="nodeEditing()" (onEdited)="nodeEdited()" />
+			<g app-node [model]="node" [context]="model" [multiSelection]="multiSelectControl"
+				(onEditing)="nodeEditing()" (onEdited)="nodeEdited()" />
 		</g>
 		<g *ngIf="model.shadowLink">
 			<path [attr.d]="model.shadowLink.curvePath" stroke="yellow" fill="none" />
@@ -40,7 +40,11 @@
 				</g>
 			</g>
 		</g>
-		<g *ngIf="toolbox" app-toolbox [context]="context" [x]="toolboxPosition.x" [y]="toolboxPosition.y" (onSelected)="onSelectedTemplate($event)"></g>
+	</g>
+
+	<g style="transform:translate(50%,50%)">
+		<g *ngIf="toolbox" app-toolbox [context]="context" x="-100" y="-280"
+			(onSelected)="onSelectedTemplate($event)"></g>
 	</g>
 
 	<!--splash screen -->
